更新绑定和解绑的内容
